--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "min",
   "version": "1.0.0",
-  "main": "server.js", 
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -13,8 +13,11 @@
   "dependencies": {
     "@telegram-apps/init-data-node": "^1.0.4",
     "@telegram-apps/sdk": "^1.1.3",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.2",
     "canvas": "^2.11.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.6.2",
@@ -23,8 +26,6 @@
     "node-telegram-bot-api": "^0.66.0",
     "sequelize": "^6.37.3",
     "sharp": "^0.33.5",
-    "sqlite3": "^5.1.7",
-    "body-parser": "^1.20.2" 
+    "sqlite3": "^5.1.7"
   }
 }
-
