--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.2",
     "node-telegram-bot-api": "^0.66.0",
-    "sequelize": "^6.37.3",
-    "sharp": "^0.33.5",
-    "sqlite3": "^5.1.7"
+    "sharp": "^0.33.5"
   }
 }
+
